--- a/index.html
+++ b/index.html
@@ -8,155 +8,170 @@
       <header>
         <section>
           <a href="#">
-            <img src="img/logo-technomart.svg" alt="Техномарт">
+            <img src="img/logo-technomart.svg" alt="На главную Техномарт">
           </a>
 
-          <p>
-            <button type="button"></button>
-            <input type="text" placehilder="Поиск:">
-          </p>
+          <form action="" method="GET">
+            <button type="submit"></button>
+            <input type="search" name="search-field" placeholder="Поиск:">
+          </form>
 
-          <p>
+          <a href="#">
             <span>Закладки:</span>
             <span>0</span>
-          </p>
+          </a>
 
-          <p>
+          <a href="#">
             <span>Закладки:</span>
             <span>0</span>
-          </p>
+          </a>
 
-          <a href="">Оформить заказ</a>
+          <a href="#">
+            Оформить заказ
+          </a>
         </section>
 
         <section>
-          <h1>Интернет-магазин <br> строительных материалов <br> и инструментов для ремонта</h1>
+          <h1>
+            Интернет-магазин <br>
+            строительных материалов <br> 
+            и инструментов для ремонта
+          </h1>
+
           <p>+7 (812) 555-05-55</p>
+
           <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+          
           <p>
-            <a href="">Войти</a>
-            <a href="">Регистрация</a>
+            <a href="#">Войти</a>
+            <a href="#">Регистрация</a>
           </p>
         </section>
 
         <nav>
           <ul>
             <li><a href="#">Главная</a></li>
-            <li><a href="">Компания</a></li>
+            <li><a href="#">Компания</a></li>
             <li><a href="catalog.html">Каталог</a></li>
-            <li><a href="">Новости</a></li>
-            <li><a href="">Спецпредложения</a></li>
-            <li><a href="">Доставка</a></li>
-            <li><a href="">Контакты</a></li>
+            <li><a href="#">Новости</a></li>
+            <li><a href="#">Спецпредложения</a></li>
+            <li><a href="#">Доставка</a></li>
+            <li><a href="#">Контакты</a></li>
           </ul>
         </nav>
       </header>
 
       <main>
-        <section>
-          <h2>Категории</h2>
+        <section aria-labelledby="categories">
+          <h2 class="visually-hidden" id="categories">Категории</h2>
           <ul>
             <li>
-              <a href="">
-                <h3>Материалы</h3>
-                <span>На любой вкус</span>
-              </a>
+              <h3>Материалы</h3>
+              <a href="#">На любой вкус</a>
             </li>
             <li>
-              <a href="">
-                <h3>Инструмент</h3>
-                <span>На все случаи</span>
-              </a>
+              <h3>Инструмент</h3>
+              <a href="#">На все случаи</a>
             </li>
             <li>
-              <a href="">
-                <h3>Техника</h3>
-                <span>Для стройки</span>
-              </a>
+              <h3>Техника</h3>
+              <a href="#">Для стройки</a>
             </li>
             <li>
-              <a href="">
-                <h3>Скидки 50%</h3>
-                <span>На 350 товаров</span>
-              </a>
+              <h3>Скидки 50%</h3>
+              <a href="#">На 350 товаров</a>
             </li>
             <li>
-              <a href="">
-                <h3>Доставка</h3>
-                <span>Бесплатно</span>
-              </a>
+              <h3>Доставка</h3>
+              <a href="#">Бесплатно</a>
             </li>
             <li>
+              <p>
                 <h3>Перфораторы</h3>
                 <span>Настоящие мужские игрушки</span>
-                <a href="">Открыть каталог</a>
+              </p>
+              <a href="">Открыть каталог</a>
             </li>
             <li>
+              <p>
                 <h3>Дрели</h3>
                 <span>Соседям на радость</span>
-                <a href="">Открыть каталог</a>
+              </p>
+              <a href="">Открыть каталог</a>
             </li>
           </ul>
         </section>
 
-        <section>
-          <h2>Популярные товары</h2>
-          <a href="">Все популярные товары</a>
+        <section aria-labelledby="popular-products">
+          <p>
+            <h2 id="popular-products">Популярные товары</h2>
+            <a href="#">Все популярные товары</a>
+          </p>
 
           <ul>
             <li>
-              <h3><a>Перфоратор BOSCH BFG 9000</a></h3>
-              <a href=""><img src="img/Perforator_4.jpg" alt="Перфоратор BOSCH BFG 9000"></a>
+              <a href="#">
+                <h3>Перфоратор BOSCH BFG 9000</h3>
+                <img src="img/Perforator_4.jpg" alt="Перфоратор BOSCH BFG 9000">
+              </a>
               <span>32500 Р.</span>
-              <a href="">25 500 Р.</a>
+              <a href="#">25 500 Р.</a>
             </li>
             <li>
-              <h3><a>Перфоратор BOSCH BFG 3000</a></h3>
-              <a href=""><img src="img/Perforator_1.jpg" alt="Перфоратор BOSCH BFG 3000"></a>
+              <a href=#>
+                <h3>Перфоратор BOSCH BFG 3000</h3>
+                <img src="img/Perforator_1.jpg" alt="Перфоратор BOSCH BFG 3000">
+              </a>
               <span>22500 Р.</span>
-              <a href="">15 500 Р.</a>
+              <a href="#">15 500 Р.</a>
             </li>
             <li>
-              <h3><a>Перфоратор BOSCH BFG 6000</a></h3>
-              <a href=""><img src="img/Perforator_2.jpg" alt="Перфоратор BOSCH BFG 6000"></a>
+              <a href=#>
+                <h3>Перфоратор BOSCH BFG 6000</h3>
+                <img src="img/Perforator_2.jpg" alt="Перфоратор BOSCH BFG 6000">
+              </a>
               <span>30500 Р.</span>
-              <a href="">25 500 Р.</a>
+              <a href="#">25 500 Р.</a>
             </li>
             <li>
-              <h3><a>Перфоратор BOSCH BFG 2000</a></h3>
-              <a href=""><img src="img/Perforator_3.jpg" alt="Перфоратор BOSCH BFG 2000"></a>
+              <a href="#">
+                <h3>Перфоратор BOSCH BFG 2000</h3>
+                <img src="img/Perforator_3.jpg" alt="Перфоратор BOSCH BFG 2000">
+              </a>
               <span></span>
-              <a href="">12500 Р.</a>
+              <a href="#">12500 Р.</a>
             </li>
           </ul>
         </section>
 
-        <section>
-          <h2>Популярные производители</h2>
-          <a href="">Все производители</a>
+        <section aria-labelledby="popular-manufacturers">
+          <p>
+            <h2 id="popular-manufacturers">Популярные производители</h2>
+            <a href="#">Все производители</a>
+          </p>
 
           <ul>
-            <li><a href=""><img src="img/bosch.png" alt="Bosch"></a></li>
-            <li><a href=""><img src="img/Makita.png" alt="Makita"></a></li>
-            <li><a href=""><img src="img/DeWALT.png" alt="DeWault"></a></li>
-            <li><a href=""><img src="img/interscol.png" alt="Интерскол"></a></li>
-            <li><a href=""><img src="img/Hitachi.png" alt="Hitachi"></a></li>
-            <li><a href=""><img src="img/LG.png" alt="LG"></a></li>
-            <li><a href=""><img src="img/AEG.png" alt="AEG"></a></li>
-            <li><a href=""><img src="img/Metabo.png" alt="metabo"></a></li>
+            <li><a href="#"><img src="img/bosch.png" alt="Bosch"></a></li>
+            <li><a href="#"><img src="img/Makita.png" alt="Makita"></a></li>
+            <li><a href="#"><img src="img/DeWALT.png" alt="DeWault"></a></li>
+            <li><a href="#"><img src="img/interscol.png" alt="Интерскол"></a></li>
+            <li><a href="#"><img src="img/Hitachi.png" alt="Hitachi"></a></li>
+            <li><a href="#"><img src="img/LG.png" alt="LG"></a></li>
+            <li><a href="#"><img src="img/AEG.png" alt="AEG"></a></li>
+            <li><a href="#"><img src="img/Metabo.png" alt="metabo"></a></li>
           </ul>
         </section>
 
-        <section>
-          <h2>Сервисы</h2>
+        <section aria-labelledby="services">
+          <h2 id="services">Сервисы</h2>
           <p>
             Хороший интернет-магазин отличается от плохого не только ценами! <br>
             Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.
           </p>
           <ul>
-            <li><a href="">Доставка</a></li>
-            <li><a href="">Гарантия</a></li>
-            <li><a href="">Кредит</a></li>
+            <li><a href="#">Доставка</a></li>
+            <li><a href="#">Гарантия</a></li>
+            <li><a href="#">Кредит</a></li>
           </ul>
           <ul>
             <li>
@@ -189,8 +204,8 @@
           </ul>
         </section>
         
-        <section>
-          <h2>Компания «Техномарт»</h2>
+        <section aria-labelledby="conpany">
+          <h2 id="company">Компания «Техномарт»</h2>
           <p>
             Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и 
             строительства не оставит равнодушными любителей сэкономить на гастарбайтерах. 
@@ -200,19 +215,19 @@
             Техномарт работает со многими транспортными компаниями: 
           </p>
           <ul>
-            <li>Деловые линии</li>
-            <li>Автотрейдинг</li>
-            <li>ЖелДорЭкспедиция</li>
+            <li><a href="#">Деловые линии</a></li>
+            <li><a href="#">Автотрейдинг</a></li>
+            <li><a href="#">ЖелДорЭкспедиция</a></li>
           </ul>
-          <a href="">Подробнее о компании</a>
+          <a href="#">Подробнее о компании</a>
         </section>
 
-        <section>
-          <h2>Контакты</h2>
+        <section aria-labelledby="contacts">
+          <h2 id="contacts">Контакты</h2>
           <p>Вы можете забрать товар сами, <br>
             заехав в наш офис:</p>
           <img src="img/map.jpg" wigth="300" height="158" alt="Карта c нашим адресом: г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8">
-          <button>Заблудились? Напишите нам!</button>
+          <button type="button">Заблудились? Напишите нам!</button>
         </section>
       </main>
 
@@ -224,15 +239,15 @@
           </p>
 
           <ul>
-            <li><a href="">Компания</a></li>
-            <li><a href="">Новости</a></li>
+            <li><a href="#">Компания</a></li>
+            <li><a href="#">Новости</a></li>
             <li><a href="catalog.html">Каталог</a></li>
-            <li><a href="">Доставка</a></li>
-            <li><a href="">Контакты</a></li>
-            <li><a href="">Материалы</a></li>
-            <li><a href="">Техника</a></li>
-            <li><a href="">Инструмент</a></li>
-            <li><a href="">Спецпредложения</a></li>
+            <li><a href="#">Доставка</a></li>
+            <li><a href="#">Контакты</a></li>
+            <li><a href="#">Материалы</a></li>
+            <li><a href="#">Техника</a></li>
+            <li><a href="#">Инструмент</a></li>
+            <li><a href="#">Спецпредложения</a></li>
           </ul>
         </div>
 
@@ -240,9 +255,9 @@
           <p>© 2010–2019 Компания «Техномарт» Все права защищены</p>
           <p>
             <ul>
-              <li><a href="">Вконтакте</a></li>
-              <li><a href="">Фейсбук</a></li>
-              <li><a href="">Инстаграм</a></li>
+              <li><a href="#">Вконтакте</a></li>
+              <li><a href="#">Фейсбук</a></li>
+              <li><a href="#">Инстаграм</a></li>
             </ul>
           </p>
           <p>
@@ -255,5 +270,35 @@
           </p>
         </div>
       </footer>
+
+      <section>
+        <h2>Написать нам</h2>
+        <form action="" method="POST">
+          <p>
+            <label for="wrte-us-name">Ваше имя:</label>
+            <input type="text" name="name" placeholder="Имя Фамилия" id="wrte-us-name">
+          </p>
+          <p>
+            <label for="write-us-email">Ваш e-mail:</label>
+            <input type="email" name="email" placeholder="email@example.com" id="write-us-email">
+          </p>
+          <p>
+            <label for="write-us-message">Текст письма?</label>
+            <input type="text" name="message" placeholder="В свободной форме" id="write-us-message">
+          </p>
+          <button type="submit">
+            Отправить
+          </button>
+        </form>
+        <button type="button">
+          Зыкрыть
+        </button>
+      </section>
+
+      <section>
+        <h2>Как до нас добраться</h2>
+        <img src="img/big-map.jpg" alt="Как до нас добраться">
+        <button type="button">Закрыть</button>
+      </section>
   </body>
 </html>
