Личный проект: завершаем базовую стилизацию

--- a/catalog.html
+++ b/catalog.html
@@ -31,16 +31,14 @@
      </div>
 
       <div>
-        <a class="basket" href="#">
+        <a class="basket bg-basket" href="#">
           <span class="basket-text">Корзина:</span>
           <span class="basket-count">10</span>
         </a>
       </div>
 
       <div>
-        <a class="checkout-button" href="#">
-          Оформить заказ
-        </a>
+        <a class="checkout-button" href="#">Оформить заказ</a>
       </div>
     </section>
 
@@ -160,8 +158,8 @@
               <fieldset>
                 <ul>
                   <li>
-                    <label for="sort-price">По цене</label>
-                    <input type="radio" name="sort-type" value="price" id="sort-price">
+                    <label class="active" for="sort-price">По цене</label>
+                    <input type="radio" name="sort-type" value="price" id="sort-price" checked>
                   </li>
                   <li>
                     <label for="sort-type">По типу</label>
@@ -190,74 +188,74 @@
     
         <section class="catalog-products">
           <h2 class="visually-hidden">Список перфораторов</h2>
-          <ul>
+          <ul class="products-list">
             <li>
               <a href="#">
                 <h3>Перфоратор BOSCH BFG 3000</h3>
                 <img src="img/Perforator_1.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
               </a>
-              <p>22500 Р.</p>
-              <a class="button price-link" href="#">15500 Р</a>
+              <p class="products-sale">22500 Р.</p>
+              <a class="button products-buy-button" href="#">15500 Р</a>
             </li>
             <li>
               <a href="#">
                 <h3>Перфоратор BOSCH BFG 6000</h3>
                 <img src="img/Perforator_2.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
               </a>
-              <p>30500 Р.</p>
-              <a class="button price-link" href="#">25500 Р</a>
+              <p class="products-sale">30500 Р.</p>
+              <a class="button products-buy-button" href="#">25500 Р</a>
             </li>
             <li>
               <a href="#"></a><h3>Перфоратор BOSCH BFG 2000</h3></a>
               <button class="product-buy" type="button">Купить</button>
               <button class="product-add-bookmarks" type="button">В закладки</button>
-              <a class="button price-link" href="#">12500 Р</a>
+              <a class="button products-buy-button" href="#">12500 Р</a>
             </li>
             <li>
               <a href="#">
                 <h3>Перфоратор BOSCH BFG 3000</h3>
                 <img src="img/Perforator_1.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
               </a>
-              <p>22500 Р.</p>
-              <a class="button price-link" href="#">15500 Р</a>
+              <p class="products-sale">22500 Р.</p>
+              <a class="button products-buy-button" href="#">15500 Р</a>
             </li>
             <li>
               <a href="#">
                 <h3>Перфоратор BOSCH BFG 6000</h3>
                 <img src="img/Perforator_2.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
               </a>
-              <p>30500 Р.</p>
-              <a class="button price-link" href="#">25500 Р</a>
+              <p class="products-sale">30500 Р.</p>
+              <a class="button products-buy-button" href="#">25500 Р</a>
             </li>
             <li>
               <a href="#">
                 <h3>Перфоратор BOSCH BFG 2000</h3>
                 <img src="img/Perforator_3.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
               </a>
-              <a class="button price-link" href="#">12500 Р</a>
+              <a class="button products-buy-button" href="#">12500 Р</a>
             </li>
             <li>
               <a href="#">
                 <h3>Перфоратор BOSCH BFG 3000</h3>
                 <img src="img/Perforator_1.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
               </a>
-              <p>22500 Р.</p>
-              <a class="button price-link" href="#">15500 Р</a>
+              <p class="products-sale">22500 Р.</p>
+              <a class="button products-buy-button" href="#">15500 Р</a>
             </li>
             <li>
               <a href="#">
                 <h3>Перфоратор BOSCH BFG 6000</h3>
                 <img src="img/Perforator_2.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
               </a>
-              <p>30500 Р.</p>
-              <a class="button price-link" href="#">25500 Р</a>
+              <p class="products-sale">30500 Р.</p>
+              <a class="button products-buy-button" href="#">25500 Р</a>
             </li>
             <li>
               <a href="#">
                 <h3>Перфоратор BOSCH BFG 2000</h3>
                 <img src="img/Perforator_3.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
               </a>
-              <a class="button price-link" href="#">12500 Р</a>
+              <a class="button products-buy-button" href="#">12500 Р</a>
             </li>
           </ul>
         </section>
@@ -272,7 +270,7 @@
         </ul>
         </section>
 
-        <section>
+        <section class="catalog-about">
             <h2>Пара слов о перфораторах</h2>
             <p>
                 Перфоратор — универсальный строительный инструмент. Предназначен для сверления и долбления отверстий в кирпиче, бетоне и камне.
